Add featured certification badge

--- a/templates/papers/index.html
+++ b/templates/papers/index.html
@@ -41,15 +41,15 @@ div, iframe {
 <h1>Accepted papers</h1>
 
 <!-- 
-<div class="border">
-<a href="#" class="badge badge-info">Primary</a>
-<a href="#" class="badge badge-success">Secondary</a>
-<a href="#" class="badge badge-success">Success</a>
-<a href="#" class="badge badge-danger">Danger</a>
-<a href="#" class="badge badge-success">Warning</a>
-<a href="#" class="badge badge-info">Info</a>
-<a href="#" class="badge badge-light">Light</a>
-<a href="#" class="badge badge-dark">Dark</a>
+    kinds of badges:
+<span class="badge badge-primary">Primary</span>
+<span class="badge badge-secondary">Secondary</span>
+<span class="badge badge-success">Success</span>
+<span class="badge badge-danger">Danger</span>
+<span class="badge badge-warning">Warning</span>
+<span class="badge badge-info">Info</span>
+<span class="badge badge-light">Light</span>
+<span class="badge badge-dark">Dark</span>
 </div> -->
 
 <p class="framed"  style="font-size: 1.2em; margin: 2em">
@@ -61,10 +61,9 @@ div, iframe {
 <span id="reproducibilitybadge" class="badge badge badge-success" >
     <a href="#" id="reproducibilitybutton" data-toggle="tooltip" data-placement="top" title="Reproduction of previously published work. Beyond verification, these papers add value through additional baselines, analysis, ablations, or insights." data-trigger="hover">Reproducibility</a> 
 </span>
-<!-- <span  class="badge badge badge-light" >
-    <a href="#" id="clearselection" >clear </a> 
-</span> -->
-<!-- <a id="clearselection" href="#">&times;</a> -->
+<span id="featuredbadge" class="badge badge badge-warning" >
+    <a href="#" id="featuredbutton" data-toggle="tooltip" data-placement="top" title="Papers of very high quality that present contributions which are novel, clearly explained, and well supported with evidence, theory, or analysis" data-trigger="hover">Featured</a> 
+</span>
 </p>
 
 <ul class="list-papers list-group list-group-flush">
