--- a/templates/base.html
+++ b/templates/base.html
@@ -134,5 +134,7 @@ ul li {
 </script>
 {% block js %}
 {% endblock %}
+<!-- for mastodon verification -->
+<a style="font-size: 0" rel="me" href="https://sigmoid.social/@tmlrsub">Mastodon</a>
 </body>
 </html>
