--- a/templates/base.html
+++ b/templates/base.html
@@ -136,5 +136,7 @@ ul li {
 {% endblock %}
 <!-- for mastodon verification -->
 <a style="font-size: 0" rel="me" href="https://sigmoid.social/@tmlrsub">Mastodon</a>
+<a style="font-size: 0" rel="me" href="https://sigmoid.social/@tmlrpub">Mastodon</a>
+<a style="font-size: 0" rel="me" href="https://sigmoid.social/@tmlrcert">Mastodon</a>
 </body>
 </html>
