--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -152,7 +152,7 @@
                 more), and is equivalent to a best paper award at a top-tier conference.</span></li>
     </ul>
     <p></p>
-    <p><span class="c1">The remaining four certifications are nominated by action editors and must be
+    <p><span class="c1">Four other certifications are nominated by action editors and must be
             reviewed and approved by at least one editor-in-chief:</span></p>
     <ul class="c9 lst-kix_pfdlg1ai0z44-0">
         <li><span class="bold">Featured Certification. </span><span class="c1">This
@@ -160,9 +160,6 @@
                 contributions which are novel, clearly explained, and well supported with evidence, theory, or analysis.
                 If this paper was submitted to a top-tier conference, it would likely be presented as an
                 oral/spotlight.</span></li>
-        <li><span class="bold">Expert Reviewer Certification</span><span class="bold">.
-            </span><span>This is awarded to papers that are </span><span>authored</span><span class="c1">&nbsp;by
-                highly-rated TMLR reviewers, to recognize their contributions and expertise.</span></li>
         <li><span class="bold">Reproducibility Certification. </span><span>This is awarded to
                 papers whose pri</span><span class="c1">mary purpose is reproduction of other published work. Beyond
                 simple verification, the paper must contribute significant added value through additional baselines,
@@ -171,6 +168,9 @@
             </span><span>Papers that not only meet the criteria for acceptance but also provide an exceptionally
                 thorough or insightful survey of the topic or approach may be awarded this certification.</span></li>
     </ul>
+    <p><span class="c1">Finally, an <span class="bold">Expert Reviewer Certification</span><span class="bold"> will be awarded to papers that are </span><span>authored</span><span class="c1">&nbsp;by
+                highly-rated TMLR reviewers, to recognize their contributions and expertise.</span></p>
+
     <h2><span class="c5">Open access policy</span></h2>
     <p><span class="c1">TMLR makes all published content immediately available to the public free of charge.
             TMLR imposes no fees or payments to authors, reviewers, action editors, or editors-in-chief.</span></p>
