--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -152,7 +152,7 @@
                 more), and is equivalent to a best paper award at a top-tier conference.</span></li>
     </ul>
     <p></p>
-    <p><span class="c1">Four other certifications are nominated by action editors and must be
+    <p><span class="c1">Three other certifications are nominated by action editors and must be
             reviewed and approved by at least one editor-in-chief:</span></p>
     <ul class="c9 lst-kix_pfdlg1ai0z44-0">
         <li><span class="bold">Featured Certification. </span><span class="c1">This
@@ -168,7 +168,7 @@
             </span><span>Papers that not only meet the criteria for acceptance but also provide an exceptionally
                 thorough or insightful survey of the topic or approach may be awarded this certification.</span></li>
     </ul>
-    <p><span class="c1">Finally, an <span class="bold">Expert Reviewer Certification</span><span class="bold"> will be awarded to papers that are </span><span>authored</span><span class="c1">&nbsp;by
+    <p><span class="c1">Finally, an <span class="bold">Expert Reviewer Certification</span> will be awarded to papers that are <span>authored</span><span class="c1">&nbsp;by
                 highly-rated TMLR reviewers, to recognize their contributions and expertise.</span></p>
 
     <h2><span class="c5">Open access policy</span></h2>
