--- a/templates/faq.html
+++ b/templates/faq.html
@@ -11,8 +11,8 @@
         Action Editor)?
 </p>
 <p>
-    A: Great! We have filled our reviewer and AE pools for now, but you can solicit to review any submission via
-    OpenReview (a solicit review button should be visible if you are logged in). You can also ask a current Action
+    A: Great! We have filled our reviewer and AE pools for now, but you can volunteer to review any submission via
+    OpenReview (a "Volunteer to Review" button should be visible if you are logged in). You can also ask a current Action
     Editor that can vouch for your qualifications to add you as a reviewer. If you would like to be an Action Editor and
     believe that you are qualified through your academic credentials as a professor or through your experience (e.g. as
     an Area Chair or Editor), please contact the Editors-in-Chief.
@@ -67,7 +67,7 @@
     <span class="italic">Q: Can I request to anonymously review a submission?
 </p>
 <p>
-    A: Yes. For this, log in to OpenReview, visit the page of the submission and click on button "Solicit Review".
+    A: Yes. For this, log in to OpenReview, visit the page of the submission and click on button "Volunteer to Review".
     The AE in charge of the submission will receive a notification asking them to accept or deny your request.
 </p>
 <p><span class="italic">Q: Does TMLR have a preference for methodological/theoretical work or will application papers be
@@ -306,7 +306,7 @@
 <p><span class="italic">Q: Can I invite someone to review a specific submission I'm in charge of,
         without them joining TMLR's general pool of reviewers?</span></p>
 <p><span>A: Yes, simply ask them to visit the submission's OpenReview page, where they can request to
-        review the submission by clicking on button "Solicit Review". You'll then receive a notification asking you to
+        review the submission by clicking on button "Volunteer to Review". You'll then receive a notification asking you to
         accept
         their request. Once you do, they will become an official reviewer for that submission.</span></p>
 <p><span class="italic">Q: I am concerned that a submission, which is otherwise acceptable, violates the TMLR
