--- a/templates/faq.html
+++ b/templates/faq.html
@@ -310,7 +310,7 @@
         accept
         their request. Once you do, they will become an official reviewer for that submission.</span></p>
 <p><span class="italic">Q: I'm in charge of a resubmission that I previously rejected, with encouragemnet to resubmit. I'd like to assign the same reviewers I used in the first round of reviews. Can I do that?</span></p>
-<p><span>A: Yes. If the reviewers in question are currently available (e.g. they don't have a pending review for another submission), go ahead and assign them as you would any reviewer. However, if the reviewers aren't available, consider reaching out by email directly to them, asking them if they could still take on the review assignment. If they agree, then ask them to click on the "Volunteer to Review" button on the OpenReview page of the submission.</span></p>
+<p><span>A: Yes. If the reviewers in question are currently available (e.g. they don't have a pending review for another submission), go ahead and assign them as you would normally. However, if the reviewers aren't available, consider reaching out by email directly to them, asking them if they could still take on the review assignment. If they agree, then ask them to click on the "Volunteer to Review" button on the OpenReview page of the submission.</span></p>
 <p><span class="italic">Q: I am concerned that a submission, which is otherwise acceptable, violates the TMLR
         ethical guidelines; how should I handle this?</span></p>
 <p><span>A: Consider whether the submission would be acceptable if the authors added or
