Add mastodon information

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -46,5 +46,14 @@
             </ul>
     </p>
 
+    <p>
+            <b>Mastodon.</b> The twitter infrastructure is partially replicated in Mastodon as:
+            <ul>
+                    <li><a href="https://sigmoid.social/web/@tmlrsub">TmlrSub</a>, one tweet for each submission.</li>
+                    <li><a href="https://sigmoid.social/web/@tmlrpub">TmlrPub</a>, one tweet for each accepted paper.</li>
+                    <li><a href="https://sigmoid.social/web/@tmlrcert">TmlrCert</a>, one tweet for each certified paper.  </li>
+            </ul>
+    </p>
+
 
 {% endblock %}
