--- a/templates/papers/index.html
+++ b/templates/papers/index.html
@@ -57,10 +57,9 @@ div, iframe {
 </div> -->
 
 <p class="framed"  style="font-size: 1.2em; margin: 2em">
-    <b>Certifications</b><br>
-
+    <b>Certifications</b>
 Accepted TMLR papers can be awareded a number of certifications by the action editors or editors-in-chief of TMLR. The current list of awardedcertificates is (click on the badges to see the papers with the certification):
-<ol>
+<ul>
     <li><span id="featuredbadge" class="badge badge badge-warning" >
         <a href="#" id="featuredbutton" data-toggle="tooltip" data-placement="top" title="Papers of very high quality that present contributions which are novel, clearly explained, and well supported with evidence, theory, or analysis" data-trigger="hover">Featured</a> 
     </span> This certification may be awarded to papers that are very high quality. These papers present significant contributions which are novel, clearly explained, and well supported with evidence, theory, or analysis. If this paper was submitted to a top-tier conference, it would likely be presented as an oral/spotlight.</li>
@@ -74,7 +73,7 @@ Accepted TMLR papers can be awareded a number of certifications by the action ed
         <span id="surveybadge" class="badge badge badge-info" >
             <a href="#" id="surveybutton" data-toggle="tooltip" data-placement="top" title="Exceptionally thorough or insightful survey of the topic." data-trigger="hover">Survey</a> The Survey Certificate is awareded to papers that not only meet the criteria for acceptance but also provide an exceptionally thorough or insightful survey of the topic or approach may be awarded this certification.    
     </li>
-</ol>
+</ul>
 
 </p>
 
