fix certifications frame

--- a/templates/papers/index.html
+++ b/templates/papers/index.html
@@ -71,7 +71,7 @@ Accepted TMLR papers can be awareded a number of certifications by the action ed
     </li>
     <li>
         <span id="surveybadge" class="badge badge badge-info" >
-            <a href="#" id="surveybutton" data-toggle="tooltip" data-placement="top" title="Exceptionally thorough or insightful survey of the topic." data-trigger="hover">Survey</a> The Survey Certificate is awareded to papers that not only meet the criteria for acceptance but also provide an exceptionally thorough or insightful survey of the topic or approach may be awarded this certification.    
+            <a href="#" id="surveybutton" data-toggle="tooltip" data-placement="top" title="Exceptionally thorough or insightful survey of the topic." data-trigger="hover">Survey</a></span> The Survey Certificate is awareded to papers that not only meet the criteria for acceptance but also provide an exceptionally thorough or insightful survey of the topic or approach may be awarded this certification.    
     </li>
 </ul>
 
