--- a/templates/papers/index.html
+++ b/templates/papers/index.html
@@ -56,8 +56,8 @@ div, iframe {
 <span class="badge badge-dark">Dark</span>
 </div> -->
 
-<div class="framed"  style="font-size: 1.2em; margin: 2em">
-    <p><b>Certifications</b> Accepted TMLR papers can be awareded a number of certifications by the action editors or editors-in-chief of TMLR. The current list of awardedcertificates is (click on the badges to see the papers with the certification):</p>
+<div class="framed"  style="margin: 2em">
+    <p><b>Certifications</b>. Accepted TMLR papers can be awareded a number of certifications by the action editors or editors-in-chief of TMLR. The current list of awardedcertificates is (click on the badges to see the papers with the certification):</p>
     <ul>
         <li><span id="featuredbadge" class="badge badge badge-warning" >
             <a href="#" id="featuredbutton" data-toggle="tooltip" data-placement="top" title="Papers of very high quality that present contributions which are novel, clearly explained, and well supported with evidence, theory, or analysis" data-trigger="hover">Featured</a> 
