Add item to FAQ

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -173,6 +173,10 @@
         the "preprint" option of the stylefile if you do.
 </p>
 
+<p><span class="italic">Q: Upon resubmission of a paper I need to specify the differences with the previous version. Won't this violate the anonymization of my latest submission?
+</p>
+<p><span>A: Only the action editor (not the reviewers) will see the previous submission URL, so including it will not violate our guidelines.
+</p>
 
 
 <h2><span>Reviewers</h2>
