--- a/templates/index.html
+++ b/templates/index.html
@@ -39,14 +39,12 @@ div, iframe {
 </p>
 
 
-<h2>OpenReview</h2>
+<h2>Reviewing and publication</h2>
 
 
 <p>
-We use the reviewing and publication systems on OpenReview for openness and transparency. See the author guidelines <a href="author-guide.html">here</a>, or proceed directly to <a href="https://openreview.net/group?id=TMLR">OpenReview</a> to start your submission.
-    
+We use the reviewing and publication systems on OpenReview for openness and transparency. See the author guidelines <a href="author-guide.html">here</a>, or proceed directly to <a href="https://openreview.net/group?id=TMLR">OpenReview</a> to start your submission. TMLR published electronically with International Standard Serial Number (ISSN) 2835-8856.
 </p>
-
 
 
 <h2>Advisory Board Members</h2>
