--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@ div, iframe {
 
 
 <p>
-We use the reviewing and publication systems on OpenReview for openness and transparency. See the author guidelines <a href="author-guide.html">here</a>, or proceed directly to <a href="https://openreview.net/group?id=TMLR">OpenReview</a> to start your submission. TMLR published electronically with International Standard Serial Number (ISSN) 2835-8856.
+We use the reviewing and publication systems on <a href="https://openreview.net/group?id=TMLR">OpenReview</a> for openness and transparency. See the author guidelines <a href="author-guide.html">here</a>, or proceed directly to <a href="https://openreview.net/group?id=TMLR">OpenReview</a> to start your submission. TMLR published electronically with International Standard Serial Number (ISSN) 2835-8856.
 </p>
 
 
