--- a/templates/base.html
+++ b/templates/base.html
@@ -111,6 +111,8 @@ ul li {
 
   <p align="right"> <a href="/tmlr/faq.html"> Frequently Asked Questions</a></p>
 
+  <p align="right"> <a href="/"> JMLR</a></p>
+      
   </div>
 
 <div id="content">
