--- a/templates/base.html
+++ b/templates/base.html
@@ -111,8 +111,12 @@ ul li {
 
   <p align="right"> <a href="/tmlr/faq.html"> Frequently Asked Questions</a></p>
 
-  <p align="right"> <a href="/"> JMLR</a></p>
-      
+  <p align="right"> <a href="/"> Journal of Machine Learning Research</a></p>
+
+ <p align="right"> <a href="https://proceedings.mlr.press/"> Proceedings of Machine Learning Research</a></p>
+
+ <p align="right"> <a href="https://data.mlr.press/"> Data-centric Machine Learning Research</a></p>
+
   </div>
 
 <div id="content">
