--- a/templates/base.html
+++ b/templates/base.html
@@ -111,11 +111,11 @@ ul li {
 
   <p align="right"> <a href="/tmlr/faq.html"> Frequently Asked Questions</a></p>
 
-  <p align="right"> <a href="/"> Journal of Machine Learning Research</a></p>
+  <p align="right"> <a href="/"> Journal of Machine Learning Research (JMLR)</a></p>
 
- <p align="right"> <a href="https://proceedings.mlr.press/"> Proceedings of Machine Learning Research</a></p>
+ <p align="right"> <a href="https://proceedings.mlr.press/"> Proceedings of Machine Learning Research (PMLR)</a></p>
 
- <p align="right"> <a href="https://data.mlr.press/"> Data-centric Machine Learning Research</a></p>
+ <p align="right"> <a href="https://data.mlr.press/"> Data-centric Machine Learning Research (DMLR)</a></p>
 
   </div>
 
