--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@ h1, h2 {
 a {text-decoration:none;color:#3030a0}
 
 #fixed {
-    position: absolute;
+/*     position: absolute; */
     top: 0;
     left: 0;
     width: 8em;
