--- a/templates/faq.html
+++ b/templates/faq.html
@@ -91,7 +91,7 @@
             href="https://en.wikipedia.org/wiki/International_Standard_Serial_Number">ISSN code</a>?
 </p>
 <p>
-    A: No, TMLR does not currently have an ISSN code.
+    A: Yes, it is 2835-8856.
 </p>
 
 
