--- a/templates/faq.html
+++ b/templates/faq.html
@@ -97,6 +97,13 @@
 
 <h2>Authors</h2>
 
+<p><span class="italic">Q: Can I use ChatGPT or other large language model systems to assist in writing my TMLR submission?</span>
+
+<p>
+    A: Yes, but TMLR also considers that it is the authors' responsibility to avoid any unforeseen consequences that might come about from using such tools, such as the later discovery that a significant part of the submission's content has been plagiarized (in which case we'd have to reject the paper). Similarly, our expectation is that the ideas, claims and results found in submissions are human-sourced, not produced by such tools.
+    <br><br>Additionally, transparency is always good, so we also require that authors mention explicitly in their submission that they have used this tool, as a footnote on the first page.
+</p>
+
 <p><span class="italic">Q: When are authors expected to submit responses to reviews?</span>
 
 <p>
