--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -168,8 +168,8 @@
             </span><span>Papers that not only meet the criteria for acceptance but also provide an exceptionally
                 thorough or insightful survey of the topic or approach may be awarded this certification.</span></li>
     </ul>
-    <p><span class="c1">Finally, an <span class="bold">Expert Reviewer Certification</span> will be awarded to papers that are <span>authored</span><span class="c1">&nbsp;by
-                highly-rated TMLR reviewers, to recognize their contributions and expertise.</span></p>
+    <p><span class="c1">Finally, an <span class="bold">Expert Certification</span> are awarded to papers that are <span>authored</span><span class="c1">&nbsp;by
+                highly-rated TMLR reviewers (i.e. our <a href="https://openreview.net/group?id=TMLR/Expert_Reviewers">Expert Reviewers</a>), to recognize their contributions and expertise.</span></p>
 
     <h2><span class="c5">Open access policy</span></h2>
     <p><span class="c1">TMLR makes all published content immediately available to the public free of charge.
