--- a/templates/expert-reviewers.html
+++ b/templates/expert-reviewers.html
@@ -39,6 +39,8 @@ $(document).ready(function(){
 {% endblock %}
 
 {% block content %}
+<h1>TMLR Expert Reviewers</h1>
+
   <ul class="editors">{% for e in expert_reviewers %}
     <li><a class="name" href="{{ e.url }}">{{ e.name }}</a>, <span class='affiliation'>{{ e.affiliation }}</span>. <span class="research">{{e.research}}</span>
       <span class="research">[<a href="https://openreview.net/profile?id={{e.id}}">OpenReview</a>] {% if e.gscholar %} [<a href="{{e.gscholar}}">Google Scholar</a>]{% endif %}</span>
