--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -42,9 +42,10 @@ $(document).ready(function(){
     <h1>TMLR Editorial Board</h1>
     <h3>Editors-in-Chief</h3>
     <ul class="editors">
-      <li><a class="name" href="http://kyunghyuncho.me">Kyunghyun Cho</a>, New York University.</li>
-      <li><a class="name" href="http://raiahadsell.com">Raia Hadsell</a>, DeepMind.</li>
-      <li><a class="name" href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a>, Mila and Google.</li>
+      <li><a class="name" href="http://kyunghyuncho.me">Kyunghyun Cho</a>, Genentech and New York University.</li>
+      <li><a class="name" href="http://raiahadsell.com">Raia Hadsell</a>, Google DeepMind.</li>
+      <li><a class="name" href="http://www.gautamkamath.com/">Gautam Kamath</a>, University of Waterloo.</li>
+      <li><a class="name" href="https://mila.quebec/en/person/hugo-larochelle/">Hugo Larochelle</a>, Mila and Google DeepMind.</li>
     </ul>
 
     <!-- <ul class="editors">{% for e in editors_in_chief %}
