Fix a few typos on FAQ

--- a/templates/faq.html
+++ b/templates/faq.html
@@ -201,7 +201,7 @@
         While the timeframe will be tight, we're trying to compensate by ensuring a low workload at any given time (no
         more than 1 paper per reviewer).
 </p>
-<p class="italic">Q: How can I avoid receiving assignments during a certail period?</p>
+<p class="italic">Q: How can I avoid receiving assignments during a certain period?</p>
 <p>
     A: If you enter a period of unavailability to receive any new assignments (e.g. you are on vacation or on work
     leave), you may now enter that information explicitly in OpenReview. To do so, simply go to your reviewer console at
@@ -300,7 +300,7 @@
         href="https://openreview.net/group?id=TMLR/Action_Editors">https://openreview.net/group?id=TMLR/Action_Editors</a>
     and, next to <b>Custom Max Paper</b>, select the number you wish for your quota.
 </p>
-<p class="italic">Q: How can I avoid receiving assignments during a certail period?</p>
+<p class="italic">Q: How can I avoid receiving assignments during a certain period?</p>
 <p>
     A: If you enter a period of unavailability to receive any new assignments (e.g. you are on vacation or on work
     leave), you may now enter that information explicitly in OpenReview. To do so, simply go to your reviewer console at
@@ -320,7 +320,7 @@
         review the submission by clicking on button "Volunteer to Review". You'll then receive a notification asking you to
         accept
         their request. Once you do, they will become an official reviewer for that submission.</span></p>
-<p><span class="italic">Q: I'm in charge of a resubmission that I previously rejected, with encouragemnet to resubmit. I'd like to assign the same reviewers I used in the first round of reviews. Can I do that?</span></p>
+<p><span class="italic">Q: I'm in charge of a resubmission that I previously rejected, with encouragement to resubmit. I'd like to assign the same reviewers I used in the first round of reviews. Can I do that?</span></p>
 <p><span>A: Yes. If the reviewers in question are currently available (e.g. they don't have a pending review for another submission), go ahead and assign them as you would normally. However, if the reviewers aren't available, consider reaching out by email directly to them, asking them if they could still take on the review assignment. If they agree, then ask them to click on the "Volunteer to Review" button on the OpenReview page of the submission.</span></p>
 <p><span class="italic">Q: I am concerned that a submission, which is otherwise acceptable, violates the TMLR
         ethical guidelines; how should I handle this?</span></p>
