--- a/templates/papers/index.html
+++ b/templates/papers/index.html
@@ -57,7 +57,7 @@ div, iframe {
 </div> -->
 
 <div class="framed"  style="margin: 2em">
-    <p><b>Certifications</b>. Accepted TMLR papers can be awareded a number of certifications by the action editors or editors-in-chief of TMLR. The current list of awarded certificates is (click on the badges to see the papers with the certification):</p>
+    <p><b>Certifications</b>. Accepted TMLR papers can be awarded a number of certifications by the action editors or editors-in-chief of TMLR. The current list of awarded certificates is (click on the badges to see the papers with the certification):</p>
     <ul>
         <li><span id="featuredbadge" class="badge badge badge-warning" >
             <a href="#" id="featuredbutton" data-toggle="tooltip" data-placement="top" title="Papers of very high quality that present contributions which are novel, clearly explained, and well supported with evidence, theory, or analysis" data-trigger="hover">Featured</a> 
@@ -70,7 +70,15 @@ div, iframe {
         </li>
         <li>
             <span id="surveybadge" class="badge badge badge-info" >
-                <a href="#" id="surveybutton" data-toggle="tooltip" data-placement="top" title="Exceptionally thorough or insightful survey of the topic." data-trigger="hover">Survey</a></span> The Survey Certificate is awareded to papers that not only meet the criteria for acceptance but also provide an exceptionally thorough or insightful survey of the topic or approach may be awarded this certification.    
+                <a href="#" id="surveybutton" data-toggle="tooltip" data-placement="top" title="Exceptionally thorough or insightful survey of the topic." data-trigger="hover">Survey</a></span> The Survey Certificate is awarded to papers that not only meet the criteria for acceptance but also provide an exceptionally thorough or insightful survey of the topic or approach may be awarded this certification.
+        </li>
+        <li>
+            <span id="expertbadge" class="badge badge badge-danger" >
+                <a href="#" id="surveybutton" data-toggle="tooltip" data-placement="top" title="Papers whose authors include at least one TMLR Expert Reviewer" data-trigger="hover">Expert</a></span> The Expert Reviewer Certificate is awarded to papers whose authors include at least one TMLR Expert Reviewer.
+        </li>
+        <li>
+            <span id="outstandingbadge" class="badge badge badge-dark" >
+                <a href="#" id="surveybutton" data-toggle="tooltip" data-placement="top" title="TMLR Outstanding Paper" data-trigger="hover">Outstanding</a></span> The editorial board of TMLR jointly awards this certification to papers which are deemed to be exceptionally high quality and broadly significant for the field. The certification may be given well after the paper's initial publication in TMLR (a year or more), and is equivalent to a best paper award at a top-tier conference.
         </li>
     </ul>
 </div>
@@ -87,6 +95,10 @@ div, iframe {
                 {% if paper.reproducibility_certification %} <a href="#" class="badge badge-success" data-toggle="tooltip" data-placement="top" title="Paper whose primary purpose is reproduction of other published work. Beyond verification, this paper add value through additional baselines, analysis, ablations, or insights." data-trigger="click">Reproducibility</a>
                 {% endif %}
                 {% if paper.featured_certification %} <a href="#" class="badge badge-warning" data-toggle="tooltip" data-placement="top" title="Papers of high quality that present contributions which are novel, clearly explained, and well supported with evidence, theory, or analysis" data-trigger="click">Featured</a>
+                {% endif %}
+                {% if paper.expert_certification %} <a href="#" class="badge badge-danger" data-toggle="tooltip" data-placement="top" title="Papers whose authors include at least one TMLR Expert Reviewer" data-trigger="click">Written by Expert Reviewer</a>
+                {% endif %}
+                {% if paper.outstanding_certification %} <a href="#" class="badge badge-dark" data-toggle="tooltip" data-placement="top" title="Outstanding paper" data-trigger="click">Outstanding</a>
                 {% endif %}
             {% endif %}
         </p>
@@ -138,6 +150,32 @@ div, iframe {
             $('.featured').show();
             $('.framed .badge').removeClass("hovered");
             $('#featuredbadge').addClass("hovered");
+            focus = this;
+        }
+    })
+    $('.badge-danger').click( function(){
+        if (focus == this) {
+            $('.item').show();
+            focus = null;
+            $('#expertbadge').removeClass("hovered");
+        } else {
+            $('.item').hide();
+            $('.expert').show();
+            $('.framed .badge').removeClass("hovered");
+            $('#expertbadge').addClass("hovered");
+            focus = this;
+        }
+    })
+    $('.badge-dark').click( function(){
+        if (focus == this) {
+            $('.item').show();
+            focus = null;
+            $('#outstandingbadge').removeClass("hovered");
+        } else {
+            $('.item').hide();
+            $('.outstanding').show();
+            $('.framed .badge').removeClass("hovered");
+            $('#outstandingbadge').addClass("hovered");
             focus = this;
         }
     })
