--- a/templates/papers/index.html
+++ b/templates/papers/index.html
@@ -74,11 +74,15 @@ div, iframe {
         </li>
         <li>
             <span id="expertbadge" class="badge badge badge-danger" >
-                <a href="#" id="surveybutton" data-toggle="tooltip" data-placement="top" title="Papers whose authors include at least one TMLR Expert Reviewer" data-trigger="hover">Expert</a></span> The Expert Reviewer Certificate is awarded to papers whose authors include at least one TMLR Expert Reviewer.
+                <a href="#" id="expertbutton" data-toggle="tooltip" data-placement="top" title="Papers whose authors include at least one TMLR Expert Reviewer" data-trigger="hover">Expert</a></span> The Expert Reviewer Certificate is awarded to papers whose authors include at least one TMLR Expert Reviewer.
         </li>
         <li>
             <span id="outstandingbadge" class="badge badge badge-dark" >
-                <a href="#" id="surveybutton" data-toggle="tooltip" data-placement="top" title="TMLR Outstanding Paper" data-trigger="hover">Outstanding</a></span> The editorial board of TMLR jointly awards this certification to papers which are deemed to be exceptionally high quality and broadly significant for the field. The certification may be given well after the paper's initial publication in TMLR (a year or more), and is equivalent to a best paper award at a top-tier conference.
+                <a href="#" id="outstandingbutton" data-toggle="tooltip" data-placement="top" title="TMLR Outstanding Paper" data-trigger="hover">Outstanding</a></span> The editorial board of TMLR jointly awards this certification to papers which are deemed to be exceptionally high quality and broadly significant for the field. The certification may be given well after the paper's initial publication in TMLR (a year or more), and is equivalent to a best paper award at a top-tier conference.
+        </li>
+        <li>
+            <span id="eventbadge" class="badge badge badge-light" >
+                <a href="#" id="eventbutton" data-toggle="tooltip" data-placement="top" title="TMLR Event Certification" data-trigger="hover">Event</a></span> TMLR papers that are presented at other conferences.
         </li>
     </ul>
 </div>
@@ -99,6 +103,8 @@ div, iframe {
                 {% if paper.expert_certification %} <a href="#" class="badge badge-danger" data-toggle="tooltip" data-placement="top" title="Papers whose authors include at least one TMLR Expert Reviewer" data-trigger="click">Written by Expert Reviewer</a>
                 {% endif %}
                 {% if paper.outstanding_certification %} <a href="#" class="badge badge-dark" data-toggle="tooltip" data-placement="top" title="Outstanding paper" data-trigger="click">Outstanding</a>
+                {% endif %}
+                {% if paper.event_certification %} <a href="#" class="badge badge-light" data-toggle="tooltip" data-placement="top" title="Event Certification" data-trigger="click">Event: {paper.which_event}</a>
                 {% endif %}
             {% endif %}
         </p>
@@ -176,6 +182,19 @@ div, iframe {
             $('.outstanding').show();
             $('.framed .badge').removeClass("hovered");
             $('#outstandingbadge').addClass("hovered");
+            focus = this;
+        }
+    })
+    $('.badge-light').click( function(){
+        if (focus == this) {
+            $('.item').show();
+            focus = null;
+            $('#eventbadge').removeClass("hovered");
+        } else {
+            $('.item').hide();
+            $('.event').show();
+            $('.framed .badge').removeClass("hovered");
+            $('#eventbadge').addClass("hovered");
             focus = this;
         }
     })
