--- a/templates/papers/index.html
+++ b/templates/papers/index.html
@@ -16,12 +16,16 @@ div, iframe {
     margin-top: 1em;
 }
 
-.badge a{
+.badge a {
     color: white;
 }
 
-.badge a:hover{
+.badge a:hover {
     text-decoration: none;
+}
+
+.badge-light {
+    color: black;
 }
 
 .hovered {
@@ -89,7 +93,7 @@ div, iframe {
 
 <ul class="list-papers list-group list-group-flush">
     {%for paper in papers %}
-    <li class="item{%if paper.certifications|length %}{% for c in paper.certifications %} {{c}} {% endfor %}{% else %} nocertificate {% endif %}">
+    <li class="item{%if paper.certifications|length %}{% for c in paper.certifications %} {{c}} {% endfor %}{% else %} nocertificate {% endif %} {%if paper.event_certification %} event {% endif %}">
         <h4><a class="paper-title darkblue" href="{{paper.pdf}}"><b>{{paper.title|safe}}</b></a></h4>
         <p><i>{{paper.authors}}</i>, {{paper.month}} {{paper.year}}  <br>
             [<a href="{{paper.openreview}}">openreview</a>] [<a href="{{paper.pdf}}">pdf</a>] [<a href="/tmlr/papers/bib/{{paper.id}}.bib">bib</a>] {% if paper.code %}[<a href="{{paper.code}}">code</a>]{% endif %}
@@ -104,7 +108,7 @@ div, iframe {
                 {% endif %}
                 {% if paper.outstanding_certification %} <a href="#" class="badge badge-dark" data-toggle="tooltip" data-placement="top" title="Outstanding paper" data-trigger="click">Outstanding</a>
                 {% endif %}
-                {% if paper.event_certification %} <a href="#" class="badge badge-light" data-toggle="tooltip" data-placement="top" title="Event Certification" data-trigger="click">Event: {paper.which_event}</a>
+                {% if paper.event_certification %} <a href="#" class="badge badge-light" data-toggle="tooltip" data-placement="top" title="Event Certification" data-trigger="click">Event: {% paper.which_event %}</a>
                 {% endif %}
             {% endif %}
         </p>
