--- a/templates/papers/index.html
+++ b/templates/papers/index.html
@@ -108,7 +108,7 @@ div, iframe {
                 {% endif %}
                 {% if paper.outstanding_certification %} <a href="#" class="badge badge-dark" data-toggle="tooltip" data-placement="top" title="Outstanding paper" data-trigger="click">Outstanding</a>
                 {% endif %}
-                {% if paper.event_certification %} <a href="#" class="badge badge-light" data-toggle="tooltip" data-placement="top" title="Event Certification" data-trigger="click">Event: {% paper.which_event %}</a>
+                {% if paper.event_certification %} <a href="#" class="badge badge-light" data-toggle="tooltip" data-placement="top" title="Event Certification" data-trigger="click">Event: {{ paper.which_event }}</a>
                 {% endif %}
             {% endif %}
         </p>
