--- a/templates/faq.html
+++ b/templates/faq.html
@@ -303,8 +303,8 @@
 <p class="italic">Q: How can I avoid receiving assignments during a certain period?</p>
 <p>
     A: If you enter a period of unavailability to receive any new assignments (e.g. you are on vacation or on work
-    leave), you may now enter that information explicitly in OpenReview. To do so, simply go to your reviewer console at
-    <a href="https://openreview.net/group?id=TMLR/Reviewers">https://openreview.net/group?id=TMLR/Reviewers</a> and,
+    leave), you may now enter that information explicitly in OpenReview. To do so, simply go to your AE console at
+    <a href="https://openreview.net/group?id=TMLR/Action_Editors">https://openreview.net/group?id=TMLR/Action_Editors</a> and,
     next to <b>Assignment Availability</b>, select <q>Unavailable</q>.
 </p>
 <p>
