--- a/templates/faq.html
+++ b/templates/faq.html
@@ -308,7 +308,7 @@
     next to <b>Assignment Availability</b>, select <q>Unavailable</q>.
 </p>
 <p>
-    Please don't forget to change that back to “Available” as soon as you are back to being able to receive assignments.
+    Please don't forget to change that back to “Available” as soon as you are back to being able to receive assignments. Your status will automatically be switched back to "Available" after two months.
 </p>
 <p><span class="italic">Q: Can I invite someone to join TMLR's pool of reviewers?</span></p>
 <p><span>A: Yes, this can be done through the AE Console on OpenReview, by clicking on link "Recruit
