--- a/templates/news/index.html
+++ b/templates/news/index.html
@@ -5,6 +5,11 @@
 <h1>TMLR News</h1>
 
 <ul>
+    <li><i>2023.09.12</i>: TMLR papers featured at AutoML 2023 Journal Track</li>
+    <li><i>2023.08.22</i>: TMLR papers featured at CoLLAs 2023 Journal Track</li>
+    <li><i>2023.07.10</i>: <a href="https://tmlr.infinite-conf.org/">TMLR Infinite Conference launched</a></li>
+    <li><i>2023.07.05</i>: <a href="https://medium.com/@TmlrOrg/announcing-the-first-tmlr-outstanding-certification-3a2838c08cda">"A Generalist Agent" awarded the first Outstanding Certification</a></li>
+    <li><i>2023.01.13</i>: <a href="https://docs.google.com/document/d/1tJTw-LUJqENC5yxwmcTqlj4_Va1fWFqv7Lxt3eKMcqE/">2022 Annual Report released</a></li>
     <li><i>2022.03.24</i>: <a href="https://jmlr.org/tmlr/news/2022/launch.html">TMLR is now accepting submissions</a></li>
 </ul>
 {% endblock %}
