--- a/templates/index.html
+++ b/templates/index.html
@@ -27,8 +27,8 @@ div, iframe {
 <h2>News</h2>
 
 <ul>
-    <li><i>2023.09.12</i>: TMLR papers featured at <a href="https://2023.automl.cc/">AutoML 2023</a> Journal Track</li>
-    <li><i>2023.08.22</i>: TMLR papers featured at <a href="https://lifelong-ml.cc/Conferences/2023">CoLLAs 2023</a> Journal Track</li>
+  <li><i>2023.09.12</i>: <a href="https://openreview.net/group?id=TMLR/Event_Certifications&event=automl.cc/AutoML/2023/Journal_Track">TMLR papers</a> featured at <a href="https://2023.automl.cc/">AutoML 2023</a> Journal Track</li>
+  <li><i>2023.08.22</i>: <a href="https://openreview.net/group?id=TMLR/Event_Certifications&event=lifelong-ml.cc/CoLLAs/2023/Journal_Track">TMLR papers</a> featured at <a href="https://lifelong-ml.cc/Conferences/2023">CoLLAs 2023</a> Journal Track</li>
     <li><i>2023.07.10</i>: <a href="https://tmlr.infinite-conf.org/">TMLR Infinite Conference launched</a></li>
     <li><i>2023.07.05</i>: <a href="https://medium.com/@TmlrOrg/announcing-the-first-tmlr-outstanding-certification-3a2838c08cda">"A Generalist Agent" awarded the first Outstanding Certification</a></li>
     <li><i>2023.01.13</i>: <a href="https://docs.google.com/document/d/1tJTw-LUJqENC5yxwmcTqlj4_Va1fWFqv7Lxt3eKMcqE/">2022 Annual Report released</a></li>
