--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@ div, iframe {
 <h2>News</h2>
 
 <ul>
+  <li><i>2023.10.18</i>: <a href="https://reproml.org/blog/announcing_mlrc2023/">TMLR partners with the 2023 Machine Learning Reproducibility Challenge</a>.</li>
   <li><i>2023.10.07</i>: <a href="https://blog.iclr.cc/2023/10/06/authors-of-tmlr-publications-with-featured-and-outstanding-certifications-at-iclr-2024/">ICLR 2024 invites authors of TMLR papers with Featured or Outstanding Certifications to present</a></li>
   <li><i>2023.09.12</i>: <a href="https://openreview.net/group?id=TMLR/Event_Certifications&event=automl.cc/AutoML/2023/Journal_Track">TMLR papers</a> featured at <a href="https://2023.automl.cc/">AutoML 2023</a> Journal Track</li>
   <li><i>2023.08.22</i>: <a href="https://openreview.net/group?id=TMLR/Event_Certifications&event=lifelong-ml.cc/CoLLAs/2023/Journal_Track">TMLR papers</a> featured at <a href="https://lifelong-ml.cc/Conferences/2023">CoLLAs 2023</a> Journal Track</li>
