--- a/templates/editorial-board.html
+++ b/templates/editorial-board.html
@@ -54,12 +54,12 @@ $(document).ready(function(){
     
     <h3>Managing Editors</h3>
     <ul class="editors">
-      <li><a class="name" href="http://paulvicol.com">Paul Vicol</a>, Google.</li>
+      <li><a class="name" href="http://paulvicol.com">Paul Vicol</a>, Google DeepMind.</li>
     </ul>
 
     <h3>Past Managing Editors</h3>
     <ul class="editors">
-      <li><a class="name" href="http://fa.bianp.net">Fabian Pedregosa</a>, Google.</li>
+      <li><a class="name" href="http://fa.bianp.net">Fabian Pedregosa</a>, Google DeepMind.</li>
     </ul>
 
     <h3>TMLR Action Editors</h3>
