Added end-of-year banner

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,6 +15,10 @@ div, iframe {
 
 <h1>Transactions on Machine Learning Research</h1>
 
+<div class="bg-info text-white" style="font-size: 20; padding-bottom: 5px; padding-top: 15px; padding-left: 10px; padding-right: 10px;">
+    <p><b>Note:</b> With the end of the year approaching, TMLR will pause the assignment of AEs to new submissions, so as to avoid assigning additional workload to our AEs and reviewers during the holiday season. We intend to resume the assignment of AEs on January 2nd.</p>
+</div>
+
 <p>
     Transactions on Machine Learning Research (TMLR) is a new venue for dissemination of machine learning research that is intended to complement JMLR while supporting the unmet needs of a growing ML community. TMLR emphasizes technical correctness over subjective significance, to ensure that we facilitate scientific discourse on topics that may not yet be accepted in mainstream venues but may be important in the future. TMLR caters to the shorter format manuscripts that are usually submitted to conferences, providing fast turnarounds and double blind reviewing. We employ a rolling submission process, shortened review period, flexible timelines, and variable manuscript length, to enable deep and sustained interactions among authors, reviewers, editors and readers. This leads to a high level of quality and rigor for every published article. TMLR does not accept submissions that have any overlap with previously published work. TMLR maximizes openness and transparency by hosting the review process on <a href="https://openreview.net/">OpenReview</a>.     
 </p>
