Add surveys to scope

--- a/templates/editorial-policies.html
+++ b/templates/editorial-policies.html
@@ -27,7 +27,8 @@
         <li><span>reproducibility studies of previously published results or
                 claims</span><span class="c1">;</span></li>
         <li><span class="c1">new approaches for analysis, visualization, and understanding of
-                artificial or biological learning systems.</span></li>
+                artificial or biological learning systems;</span></li>
+        <li><span class="c1">surveys that draw new connections, highlight trends, and suggest new problems in an area.</span></li>
     </ul>
     <h2><span>Dual Submissions and Originality</span></h2>
     <p><span>Unlike many other journals, TMLR only accepts original contributions that don&rsquo;t reuse the
